--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,76 @@
 absl-py==2.1.0
+astunparse==1.6.3
 attrs==23.2.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.6.2
 cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
 flatbuffers==24.3.25
 fonttools==4.51.0
+gast==0.5.4
+google-auth==2.30.0
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+greenlet==3.0.3
+grpcio==1.64.1
+h5py==3.11.0
+idna==3.7
+itsdangerous==2.2.0
 jax==0.4.29
 jaxlib==0.4.29
+Jinja2==3.1.4
 joblib==1.4.2
+keras==2.15.0
 kiwisolver==1.4.5
+libclang==18.1.1
+Markdown==3.6
+MarkupSafe==2.1.5
 marshmallow==3.21.1
 matplotlib==3.8.4
 mediapipe==0.10.13
 ml-dtypes==0.4.0
 numpy==1.26.4
-opencv-contrib-python==4.9.0.80
-opencv-python==4.9.0.80
+oauthlib==3.2.2
+opencv-contrib-python==4.10.0.82
+opencv-python==4.10.0.82
 opt-einsum==3.3.0
 packaging==24.0
 paho-mqtt==1.6.1
+pandas==2.2.2
 pillow==10.3.0
 protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
 scikit-learn==1.4.2
 scipy==1.13.0
-setuptools==69.5.1
+seaborn==0.13.2
 six==1.16.0
 sounddevice==0.4.6
+SQLAlchemy==2.0.30
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
 threadpoolctl==3.5.0
-wheel==0.43.0
-tensorflow~=2.15.0
-pandas~=2.2.2
-seaborn~=0.13.2
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.1
+Werkzeug==3.0.3
+wrapt==1.14.1
