--- a/requirements.txt
+++ b/requirements.txt
@@ -27,24 +27,26 @@ grpcio==1.64.1
 h5py==3.11.0
 idna==3.7
 itsdangerous==2.2.0
-jax==0.4.29
-jaxlib==0.4.29
 Jinja2==3.1.4
 joblib==1.4.2
 keras==2.15.0
 kiwisolver==1.4.5
 libclang==18.1.1
 Markdown==3.6
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.1
 matplotlib==3.8.4
+mdurl==0.1.2
 mediapipe==0.10.13
-ml-dtypes==0.4.0
+ml-dtypes~=0.2.0
+namex==0.0.8
 numpy==1.26.4
 oauthlib==3.2.2
 opencv-contrib-python==4.10.0.82
 opencv-python==4.10.0.82
 opt-einsum==3.3.0
+optree==0.11.0
 packaging==24.0
 paho-mqtt==1.6.1
 pandas==2.2.2
@@ -54,12 +56,14 @@ protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+Pygments==2.18.0
 PyJWT==2.8.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+rich==13.7.1
 rsa==4.9
 scikit-learn==1.4.2
 scipy==1.13.0
@@ -67,12 +71,7 @@ seaborn==0.13.2
 six==1.16.0
 sounddevice==0.4.6
 SQLAlchemy==2.0.30
-tensorboard==2.15.2
-tensorboard-data-server==0.7.2
 tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 threadpoolctl==3.5.0
 typing_extensions==4.12.2
