--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,19 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    volumes: [ ".:/opt" ]
+    volumes:
+      - ".:/opt"
+      - "/tmp/.X11-unix:/tmp/.X11-unix"  # Mount the X11 socket for GUI
     environment:
+      JWT_SECRET_KEY: "193504581495585040306888195448223906377"
       PORT: "5000"
       FLASK_DEBUG: "true"
+      DISPLAY: "host.docker.internal:0.0"  # Set the display environment for Windows
     ports:
       - "5000:5000"
+    networks:
+      - default
 
+networks:
+  default:
+    driver: bridge
